# mcp-server-colab-exec

./: .gitignore  PRIVACY.md  README.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: publish.yml
src/mcp_server_colab_exec/: colab_runtime.py  server.py
